update admin page